smithy-model/src/test/resources/software/amazon/smithy/model/loader/valid/mixins/operations.flattened.smithy
$version: "2.0"

namespace smithy.example

@error("client")
structure ConcreteError {}

@error("server")
structure MixinError {}

@internal
operation ConcreteOperation {
    errors: [MixinError, ConcreteError]
}
